--- a/styles.css
+++ b/styles.css
@@ -57,14 +57,22 @@ nav{
     margin-top: 8px;
 }
 
-.navbar{
+.navbar{/* un color para cada navbar */
     background-color: #2471A3;
+}
+
+.navbarN{
+    background-color: #e9644c;
 }
 
 ul{
     text-align: right; /* lleva los elementos li a la derecha */
-    padding: 7px /* aleja el texto del margen de la caja cn relleno */
-}
+    padding: 7px; /* aleja el texto del margen de la caja cn relleno */
+    word-spacing: 15px;/* espacio entre palabras */
+    padding-right: 20px;
+    }
+
+/* PROBLEMA CON RESPONSIVE EN NAVBAR si uso position absolute se corrige pero no muestra los li a la derecha */
 
 li{
     list-style-type: none; /* quita el formato de lista */
@@ -74,4 +82,5 @@ li{
 
 li a{
     text-decoration: none;
+    color: beige;
 }
