--- a/styles.css
+++ b/styles.css
@@ -181,9 +181,9 @@ main{
 /* Aside */
 aside{
     width: 30%;
-    margin-left: 15%;
+    margin-left: 13%;
     background-color:#5282a1;
-    margin-bottom: 300px;
+    margin-bottom: 30%;
     padding: 10px;
     margin-right: -4px;
 }
@@ -191,8 +191,9 @@ aside{
 .principal{
     width: 95%;
     background: #ebfbfb;
-    padding: 7px;
+    padding: 4px;
     margin: 14px;
+    word-spacing: 0.5px;
 }
 
 .destacado{
@@ -205,7 +206,6 @@ aside{
 }
 
 .destacado p{
-    text-align: justify;
     padding-left: 12px;
     padding-right: 12px;
     padding-bottom: 12px;
@@ -215,12 +215,13 @@ aside{
 .secundario{
     width: 95%;
     background: #ebfbfb;
-    padding: 7px;
+    padding: 4px;
     margin-bottom: 14px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
+    word-spacing: 0.4px;
 }
 
 .noticia{
@@ -254,6 +255,20 @@ aside{
     color: black;
 }
 
+#logohorizontal{
+    display: none;
+}
+
+span{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+}
+#logovertical{
+    transform: rotate(90deg);
+    margin-top: 350px;
+}
+
 @media screen and (min-width: 250px) and (max-width: 750px){
     main{
         display: flex;
@@ -278,7 +293,6 @@ aside{
     }
     .principal{
         font-size: 0.7em;
-        padding: 2px;
         margin:10px;
         margin-bottom: -1px;
     }
@@ -303,7 +317,22 @@ aside{
         width: 100%;
         background-color: #5282a1;
     }
+
 }
+
+/* mediaquerys de imagenes aside */
+@media screen and (min-width:250px) and (max-width:750px) {
+    
+    #logovertical{
+        display: none;
+    }
+
+    #logohorizontal{
+        display: block;
+    }
+    
+}
+
 
 /* FOOTER */
 
@@ -322,4 +351,10 @@ footer p{
 footer p a{
     color: #b3afae;
     text-decoration: none;
+}
+
+@media screen and  (min-width:250px) and (max-width:750px) {
+    footer{
+        width: 90%;
+    }
 }
