--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,11 @@ li a{
     color: beige;
 }
 
+li a:hover{
+    text-transform: uppercase;
+    font-weight: 1000;
+}
+
 .navbar li a:hover{/* lo que pasa cuando pasa el mouse sobre los items */
     background-color: rgb(208, 229, 231);
     color: rgb(37, 37, 37);
