--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@
 body{
     background: #EBF5FB;
 }
+.fondoN{ /* color fondo noticias */
+    background:#faebfb;
+}
 /* HEADER */
 header{
 
@@ -175,6 +178,7 @@ main{
     padding-right: 4px;/* iguala el ancho con el header, si ponia 15 en left el contenido se veia mas al costado*/
     font-size: 1.4em;
 }
+
 .contenido{
     background: #103e5c;
     width: 70%;
@@ -185,13 +189,15 @@ main{
     }
 /* Aside */
 aside{
-    width: 30%;
-    margin-left: 13%;
+    width: 33%;
+    margin-left: 10%;
     background-color:#5282a1;
     margin-bottom: 30%;
     padding: 10px;
     margin-right: -4px;
 }
+
+
 /* contenido de nuevo */
 .principal{
     width: 95%;
@@ -215,6 +221,10 @@ aside{
     padding-right: 12px;
     padding-bottom: 12px;
 
+}
+.destacado a{
+    text-decoration: none;
+    color: black;
 }
 
 .secundario{
@@ -340,7 +350,6 @@ span{
 
 
 /* FOOTER */
-
 footer{
     width: 85%;
     margin-left: auto;
@@ -369,4 +378,105 @@ footer p a{
     footer{
         width: 90%;
     }
+}
+/* FOOTER TERMINADO PARA TODAS LAS PAGINAS */
+
+/* PAGINA NOTICIAS */
+.principalN{/* modifica main de noticias */
+    display: flex;
+    flex-direction: column;
+    width: 87%;
+    padding: 0;
+    padding-left: 2px;
+    padding-right: 2px;/* con estos 4 px iguala el ancho de main con header */
+    background-color: #dfb893;
+}
+.newsfull{/* contenedor noticias */
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    margin-bottom: 20px;
+}
+
+.maintitle{
+    padding: 20px;
+    padding-bottom: 30px;
+    text-align: center;
+}
+
+.maintitle h1{
+    font-weight: 1000;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.nota1{
+    text-align: justify;
+    width: 90%;
+    margin: auto;
+    border: black 4px solid;
+    padding: 15px;
+}
+.nota1 h2{
+    margin:20px;
+}
+.nota1 h3{
+    margin: 20px;
+    margin-top: 20px;
+}
+
+.nota1 h4{
+    padding-top: 25px;
+}
+
+.nota1 h2, h3, h4{
+    text-transform: uppercase;
+}
+.nota1 p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.nota1 .izq{
+    border: #a83e26 5px solid;
+    float: left;
+    margin-right: 50px;
+}
+
+.nota1 img{
+    border: #a83e26 5px solid;
+    float: right;
+    margin-left: 50px;
+}
+
+.nota1 h4{
+    margin: 10px;
+}
+
+.bannN{
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
+    background-color: #a06070;
+    display: block;
+    margin-bottom: 10px;
+}
+.bannN img{
+    margin: 10px;
+}
+
+@media screen and (min-width: 250px) and (max-width: 750px) {
+    .principalN{
+        width: 90%;
+        padding-right: 15px;
+        padding-left: 15px;  
+    }
+}
+
+.principalN a button{
+    font-size: 0.8em;
+    font-weight: 700;
+    padding: 4px;
+    margin-right: 20px;
+    margin-bottom: 10px;
+    float: right;
 }
